# Programacion

clase 3/drones/: main.py  pyproject.toml
clase 3/drones/.pytest_cache/v/cache/: lastfailed  nodeids
clase 3/drones/src/drones/models/: drone.py
clase 3/drones/tests/: Untitled.ipynb  resultados.py  test_dron.py
clase1/factorial/: pyproject.toml
clase1/factorial/src/factorial/: operacion.py
clase1/factorial_rush/: Cargo.toml
clase1/factorial_rush/examples/: calcular.rs
clase1/factorial_rush/src/: lib.rs
clase2/weather/: pyproject.toml  resultado.xlsx
clase2/weather/src/weather/: funtions.py  main.py
