[project]
name = "drones"
version = "0.1.0"
description = ""
authors = [
    {name = "daniarango36",email = "daniarango36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "drones", from = "src"}]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
