[project]
name = "weather"
version = "0.1.0"
description = ""
authors = [
    {name = "daniarango36", email = "daniarango36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"

[tool.poetry]
packages = [{include = "weather", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "2.25.1"
pandas = "1.3.5"
factorial = {path = "../../clase1/factorial", develop = true}
multiprocess = "^0.70.17"
asyncio = "^3.4.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"